// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`declare.php 1`] = `
<?php declare(strict_types=1); ?>
<html>
    <body>
        <?php
          $a = 1;
        ?>
    </body>
</html>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php declare(strict_types=1); ?>
<html>
    <body>
        <?php
        $a = 1;
        ?>
    </body>
</html>

`;

exports[`inline.php 1`] = `
<?php

function inline() {
    ?>
    <span>Hello World!</span>
    <?php
}

function inline1() {
    ?><span>Hello World!</span>
    <?php
}

function inline2() {
    ?>
    <span>Hello World!</span><?php
}

function inlineInOneLine() {
    ?><span>Hello World!</span><?php
}

function inlineNested() {
    ?>
    <div>
      <span>Hello World!</span>
    </div>
    <?php
}

function inlineNested1() {
    ?><div>
    <span>Hello World!</span>
    </div><?php
}

function inlineMultipleStatements() {
    $a = 1;
    ?>
    <span>Hello World!</span>
    <?php
    $b = 1;
    ?>
    <span>Hello World!</span>
    <?php
    $c = 1;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
function inline()
{
    ?>
    <span>Hello World!</span>
    <?php
}

function inline1()
{
    ?><span>Hello World!</span>
    <?php
}

function inline2()
{
    ?>
    <span>Hello World!</span><?php
}

function inlineInOneLine()
{
    ?><span>Hello World!</span><?php
}

function inlineNested()
{
    ?>
    <div>
      <span>Hello World!</span>
    </div>
    <?php
}

function inlineNested1()
{
    ?><div>
    <span>Hello World!</span>
    </div><?php
}

function inlineMultipleStatements()
{
    $a = 1;
     ?>
    <span>Hello World!</span>
    <?php
    $b = 1;
    ?>
    <span>Hello World!</span>
    <?php $c = 1;
}

`;

exports[`mixed.php 1`] = `
<p>Test.</p>
<?php echo 'String.'; ?>
<p>Test.</p>
<?php if ($expression == true): ?>
  <p>Test.</p>
<?php else: ?>
  <p>Test.</p>
<?php endif; ?>
<?php echo '<input type="hidden" value="' . htmlspecialchars($data) . '" />'; ?>
<div></div>
<?php
echo 'foo';
echo 'bar';
?>
<div class="<?php echo $class; ?>"></div>
<div>
  <h1>
    <?php print_welcome_message(); ?>
  </h1>
</div>
<div id="results">
  <table class="sortable">
    <?php $results = $statement->fetchAll(PDO::FETCH_ASSOC); ?>
    <?php do { ?>
      <tr>
        <?php for ($i = 0; $i < count($columns); $i++): ?>
          <td><?php echo $row[$i] ?></td>
        <?php endfor; ?>
      </tr>
    <?php } while (($row = next($results)) != false); ?>
  </table>
</div>
<div id="results">
  <table class="sortable">
    <?php foreach ($statement->fetchAll(PDO::FETCH_ASSOC) as $row): ?>
      <tr>
        <?php foreach ($row as $element): ?>
          <td><?php echo $element ?></td>
        <?php endforeach; ?>
      </tr>
    <?php endforeach; ?>
  </table>
</div>
<div>
  <?php switch($variable):
  case 1: ?>
      <div>Newspage</div>
      <?php break; ?>
  <?php case 2: ?>
      </div>Forum<div>
  <?php break; ?>
  <?php endswitch; ?>
</div>
<ul>
  <?php for($i=1;$i<=5;$i++){ ?>
      <li>Menu Item <?php echo $i; ?></li>
  <?php } ?>
</ul>
<?php while(true): ?>
  <span>Text</span>
<?php endwhile; ?>
<h1>Head</h1>
<?php $var = 1; ?>
<?php if ($expression == true): ?>
  <p>Test.</p>
<?php else: ?>
  <p>Test.</p>
<?php endif; ?>
<?php $var = 1; ?>
<div>
  <?php while ($i <= 10): ?>
    <span><?php echo $i; ?></span>
    <?php $i++; ?>
  <?php endwhile; ?>
</div>
<div>
  <?php if($a > $b): ?>
    <span><?php echo $a." > ".$b;?></span>
  <?php elseif($a == $b): ?>
    <span><?php echo $a." == ".$b; ?></span>
  <?php else: ?>
    <span><?php echo $a." < ".$b; ?></span>
  <?php endif; ?>
</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<p>Test.</p>
<?php
echo 'String.';
?>
<p>Test.</p>
<?php if ($expression == true): ?>
  <p>Test.</p>
<?php else: ?>
  <p>Test.</p>
<?php endif;
echo '<input type="hidden" value="' . htmlspecialchars($data) . '" />'; ?>
<div></div>
<?php echo 'foo';
echo 'bar';
 ?>
<div class="<?php echo $class; ?>"></div>
<div>
  <h1>
    <?php
    print_welcome_message();
    ?>
  </h1>
</div>
<div id="results">
  <table class="sortable">
    <?php
    $results = $statement->fetchAll(PDO::FETCH_ASSOC);
    ?>
    <?php do { ?>
      <tr>
        <?php for ($i = 0; $i < count($columns); $i++): ?>
          <td><?php echo $row[$i]; ?></td>
        <?php endfor; ?>
      </tr>
    <?php } while (($row = next($results)) != false); ?>
  </table>
</div>
<div id="results">
  <table class="sortable">
    <?php foreach ($statement->fetchAll(PDO::FETCH_ASSOC) as $row): ?>
      <tr>
        <?php foreach ($row as $element): ?>
          <td><?php echo $element; ?></td>
        <?php endforeach; ?>
      </tr>
    <?php endforeach; ?>
  </table>
</div>
<div>
  <?php switch ($variable): case 1: ?>
      <div>Newspage</div>
      <?php break; ?>
  <?php case 2: ?>
      </div>Forum<div>
  <?php break; ?>
  <?php endswitch; ?>
</div>
<ul>
  <?php for ($i = 1; $i <= 5; $i++) { ?>
      <li>Menu Item <?php echo $i; ?></li>
  <?php } ?>
</ul>
<?php while (true): ?>
  <span>Text</span>
<?php endwhile; ?>
<h1>Head</h1>
<?php $var = 1;
if ($expression == true):
    ?>
  <p>Test.</p>
<?php
else:
    ?>
  <p>Test.</p>
<?php
endif;
$var = 1; ?>
<div>
  <?php while ($i <= 10): ?>
    <span><?php echo $i; ?></span>
    <?php $i++; ?>
  <?php endwhile; ?>
</div>
<div>
  <?php if ($a > $b): ?>
    <span><?php echo $a . " > " . $b; ?></span>
  <?php elseif ($a == $b): ?>
    <span><?php echo $a . " == " . $b; ?></span>
  <?php else: ?>
    <span><?php echo $a . " < " . $b; ?></span>
  <?php endif; ?>
</div>

`;

exports[`mixed-1.php 1`] = `
<?php
$a = 1;
?>
<div>Foo</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php $a = 1; ?>
<div>Foo</div>

`;

exports[`mixed-2.php 1`] = `
<div>Foo</div>
<?php
$a = 1;
?>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div>Foo</div>
<?php $a = 1;

`;

exports[`mixed-3.php 1`] = `
<?php if ($expression == true): ?>
    <p>Test.</p>
<?php else: ?>
    <p>Test.</p>
<?php endif; ?>
<div>Hello world</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
if ($expression == true): ?>
    <p>Test.</p>
<?php else: ?>
    <p>Test.</p>
<?php endif; ?>
<div>Hello world</div>

`;

exports[`mixed-4.php 1`] = `
<div>Hello world</div>
<?php if ($expression == true): ?>
    <p>Test.</p>
<?php else: ?>
    <p>Test.</p>
<?php endif; ?>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div>Hello world</div>
<?php if ($expression == true): ?>
    <p>Test.</p>
<?php else: ?>
    <p>Test.</p>
<?php endif;

`;

exports[`mixed-5.php 1`] = `
text
<?php
if (!empty($dataXXXXXXXXXXXXXXXXXXXX)) {
    foreach ($dataXXXXXXXXXXXXXXXXXXXX as $key => $value) {
        if ((!is_string($value) && !is_numeric($value)) || !is_string($key)) {
            continue;
        }
        if (get_magic_quotes_gpc()) {
            $value = htmlspecialchars(stripslashes((string) $value));
        } else {
            $value = htmlspecialchars((string) $value);
        }
    }
}
?>
text~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
text
<?php
if (!empty($dataXXXXXXXXXXXXXXXXXXXX)) {
    foreach ($dataXXXXXXXXXXXXXXXXXXXX as $key => $value) {
        if ((!is_string($value) && !is_numeric($value)) || !is_string($key)) {
            continue;
        }
        if (get_magic_quotes_gpc()) {
            $value = htmlspecialchars(stripslashes((string) $value));
        } else {
            $value = htmlspecialchars((string) $value);
        }
    }
}
?>
text

`;

exports[`mixed-6.php 1`] = `
<section class="<?= $sectionClass ?>">
  <header class="<?= $headerClass ?>">
    <?php
      echo $this->element('collection/item-title', [
        'class' => $itemTitleClass,
        'small_title' => $item->small_title,
        'title' => $item->title,
        'url' => $url,
        'color' => $item->title_color ?: 'primary',
      ]);
    ?>
  </header>
</section>

<section class="<?= $sectionClass ?>">
  <header class="<?= $headerClass ?>">
    <?php
      echo $this->element('collection/item-title', [
        'class' => $itemTitleClass,
        'small_title' => $item->small_title,
        'title' => $item->title,
        'url' => $url,
        'color' => $item->title_color ?: 'primary',
      ]);
    ?>
  </header> <?= $someOtherVar()->element('collection/item-title', [
    'class' => $itemTitleClass,
    'small_title' => $item->small_title,
    'title' => $item->title,
    'url' => $url,
    'color' => $item->title_color ?: 'primary',
  ]); ?>
</section>~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<section class="<?php echo $sectionClass; ?>">
  <header class="<?php echo $headerClass; ?>">
    <?php
    echo $this->element('collection/item-title', [
        'class' => $itemTitleClass,
        'small_title' => $item->small_title,
        'title' => $item->title,
        'url' => $url,
        'color' => $item->title_color ?: 'primary'
    ]);
    ?>
  </header>
</section>

<section class="<?php echo $sectionClass; ?>">
  <header class="<?php echo $headerClass; ?>">
    <?php
    echo $this->element('collection/item-title', [
        'class' => $itemTitleClass,
        'small_title' => $item->small_title,
        'title' => $item->title,
        'url' => $url,
        'color' => $item->title_color ?: 'primary'
    ]);
    ?>
  </header> <?php
            echo $someOtherVar()->element('collection/item-title', [
                'class' => $itemTitleClass,
                'small_title' => $item->small_title,
                'title' => $item->title,
                'url' => $url,
                'color' => $item->title_color ?: 'primary'
            ]);
            ?>
</section>

`;

exports[`mixed-7.php 1`] = `
<?php declare(strict_types=1); ?>
<html>
    <body>
        <?php
          $a = 1;
        ?>
    </body>
</html>~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php declare(strict_types=1); ?>
<html>
    <body>
        <?php $a = 1; ?>
    </body>
</html>

`;

exports[`mixed-8.php 1`] = `
<?php declare(strict_types=1); ?>
<html>
    <body>
        <?php $a = 1; $b = 1; ?>
    </body>
</html>~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php declare(strict_types=1); ?>
<html>
    <body>
        <?php
        $a = 1;
        $b = 1;
        ?>
    </body>
</html>

`;

exports[`only-html.php 1`] = `
<!DOCTYPE html>
<html>
  <body>
    <h1>My First Heading</h1>
    <p>My first paragraph.</p>
  </body>
</html>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<!DOCTYPE html>
<html>
  <body>
    <h1>My First Heading</h1>
    <p>My first paragraph.</p>
  </body>
</html>

`;
